--- a/PrintStop/app/src/main/AndroidManifest.xml
+++ b/PrintStop/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MainScreen"></activity>
+        <activity android:name=".ui.MainScreen" />
+        <activity android:name=".ui.Help" />
+        <activity android:name=".AddMoreFiles"></activity>
     </application>
 
 </manifest>
